--- a/last.html
+++ b/last.html
@@ -385,7 +385,7 @@
         <div class="memory-card">
             <img src="./d2.jpg" alt="Beach Day" class="memory-img">
             <div class="memory-date">Together Vibes</div>
-            <div class="memory-caption">May your journey ahead be filled with happiness, success, and endless
+            <div class="memory-caption">Though we have not spent a single moment together irl, I still find our virtually together moments much more intimate than anything, hope you think the same babyyy....May your journey ahead be filled with happiness, success, and endless
                 smiles.😊💕</div>
         </div>
         <div class="memory-card">
@@ -399,10 +399,10 @@
     <section class="final-message">
         <h2>Thank You for the Memories</h2>
         <p>Every laugh, every chat, and every moment we’ve shared has been truly special.💫<br>
-            I’m so grateful for the bond we have, and for the positivity you always bring into my life.<br>
+            I’m so grateful for the bond we have, and for the positivity(Meri Kaleshhhhhni) you always bring into my life.<br>
             On your birthday, I just wish for endless happiness, love, and success to come your way.🌸</p>
         <p>You deserve all the joy in the world—keep shining and spreading your beautiful energy.✨</p>
-        <a href="#" class="goodbye-btn">Until We Meet Again 💝</a>
+        <a href="#" class="goodbye-btn">Missing You with All My Heart💝</a>
     </section>
 </body>
 
