Update button text for birthday greeting

--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1>Happy Birthday Aditiii💗</h1>
         <div class="greeting"></div>
-        <button class="cta-button">Click to Enter Our World 💕</button>
+        <button class="cta-button">Click to step into your magic 💕</button>
     </div>
 
     <script src="script.js">
