Modify subtitle and update unlock password
Updated the subtitle and changed the correct password.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ button:hover {
 
 <div class="lock-container">
     <div class="lock-title">🔒 Just One Step</div>
-    <div class="lock-subtitle">Only someone special knows this 💕</div>
+    <div class="lock-subtitle">Lagao Dimaag aur Socho Tareekh, Meri Ullu 💕</div>
 
     <input type="password" id="password" placeholder="DDMMYYYY">
     <br>
@@ -102,7 +102,7 @@ button:hover {
 
 <script>
 function unlock() {
-    const correctPassword = "14022023"; // 👈 CHANGE THIS
+    const correctPassword = "18112025"; // 👈 CHANGE THIS
     const input = document.getElementById("password").value;
 
     if (input === correctPassword) {
