--- a/cause.html
+++ b/cause.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Why You're My Best Friend! 💖</title>
+    <title>You're My Best Friend! 💖</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <link rel="stylesheet" href="./cause.css">
     <style>
@@ -18,7 +18,8 @@
     </div>
 
     <div class="container">
-        <h1>Happy Birthday Aditiiii 💖</h1>
+        <h1>Happiiieeestttt Birthday Meriiii Kajuukatliii  💖 </h1>
+        <h2>Thodiii tareefein aur Blessings leti jaaao Darling  💕 </h2>
         
         <div id="reasons-container"></div>
         
