--- a/last.html
+++ b/last.html
@@ -410,9 +410,10 @@
             I’m so grateful for the bond we have, and for the positivity(Meri Kaleshhhhhni💝) you always bring into my life.<br>
             On your birthday, I just wish for endless happiness, love, and success to come your way.🌸</p>
         <p>You deserve all the joy in the world...keep shining and spreading your beautiful energy.✨</p>
-        <a href="javascript:void(0)" class="goodbye-btn" onclick="showCakeAndPlay()">
+        <a href="surprise.html" class="goodbye-btn">
     Missing You with All My Heart💝
 </a>
+
 
 <div id="cakeWrap" style="display:none; text-align:center; margin-top:30px;">
     <img src="cake.gif" alt="Cake" class="cake-gif">
@@ -421,15 +422,6 @@
 
     </section>
    
-    <script>
-function showCakeAndPlay() {
-    const cake = document.getElementById("cakeWrap");
-    const audio = document.getElementById("voiceNote");
-
-    cake.style.display = "block";
-    audio.play();
-}
-</script>
 
 </body>
 
