--- a/surprise.html
+++ b/surprise.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>For You ❤️</title>
 
-    <!-- THIS LINE BRINGS THE THEME -->
+    <!-- THEME -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- FLOATING EMOJI STYLES -->
+    <link rel="stylesheet" href="cause.css">
+
+    <!-- GSAP (REQUIRED for floating emojis) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
+
 
 <body>
 
