Replace cause.js with floating.js script

--- a/surprise.html
+++ b/surprise.html
@@ -26,7 +26,7 @@
     </div>
 
     <!-- THIS LINE BRINGS THE FLOATING HEARTS -->
-    <script src="cause.js"></script>
+    <script src="floating.js"></script>
 
 </body>
 </html>
